# Powder-Game

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  build-win11.sh
.github/workflows/: ci.yml  release.yml
shaders/: composite.frag  coupling_fire.comp  coupling_heat.comp  coupling_sand_drag.comp  coupling_smoke.comp  fire_rd.comp  fullscreen.vert  heat_diffuse.comp  init_state.comp  sand_commit.comp  sand_desired.comp  sand_prepare.comp  sand_resolve.comp  smoke_advect.comp  smoke_divergence.comp  smoke_pressure_clear.comp  smoke_pressure_jacobi.comp  smoke_project.comp  smoke_vorticity.comp  spawn.comp  tile_build.comp  tile_compact.comp  tile_dilate.comp  tile_dispatch.comp  tile_downsample.comp  water_lbm.comp  water_pressure.comp
src/: GLUtil.cpp  GLUtil.hpp  PowderApp.cpp  PowderApp.hpp  main.cpp
